--- a/ShiftRpg/ShiftRpg.csproj
+++ b/ShiftRpg/ShiftRpg.csproj
@@ -371,6 +371,7 @@
     <None Remove="Controllers\DefaultSword\**" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IEffect.cs" />
     <Compile Include="Contracts\IEffectReceiver.cs" />
     <Compile Include="Contracts\IGameplayInputDevice.cs" />
     <Compile Include="Contracts\IGun.cs" />
@@ -378,10 +379,11 @@
     <Compile Include="Contracts\IMeleeWeapon.cs" />
     <Compile Include="Contracts\IMeleeWeaponInputDevice.cs" />
     <Compile Include="Contracts\IProjectile.cs" />
-    <Compile Include="Controllers\DefaultGun\GunController.cs" />
-    <Compile Include="Controllers\DefaultGun\Ready.cs" />
-    <Compile Include="Controllers\DefaultGun\Recovery.cs" />
-    <Compile Include="Controllers\DefaultGun\Reloading.cs" />
+    <Compile Include="Contracts\ITakesDamage.cs" />
+    <Compile Include="Controllers\Gun\GunController.cs" />
+    <Compile Include="Controllers\Gun\Ready.cs" />
+    <Compile Include="Controllers\Gun\Recovery.cs" />
+    <Compile Include="Controllers\Gun\Reloading.cs" />
     <Compile Include="Controllers\MeleeWeapon\Active.cs" />
     <Compile Include="Controllers\MeleeWeapon\Idle.cs" />
     <Compile Include="Controllers\MeleeWeapon\MeleeWeaponController.cs" />
@@ -402,6 +404,8 @@
     <Compile Include="DataTypes\TopDownValues.Generated.cs" />
     <Compile Include="Effects\DamageEffect.cs" />
     <Compile Include="Effects\KnockbackEffect.cs" />
+    <Compile Include="Effects\StandardEffectHandlers.cs" />
+    <Compile Include="Effects\Team.cs" />
     <Compile Include="Entities\Bullet.cs" />
     <Compile Include="Entities\Bullet.Generated.cs">
       <DependentUpon>Bullet.cs</DependentUpon>
@@ -434,6 +438,10 @@
     <Compile Include="Entities\Player.Generated.cs">
       <DependentUpon>Player.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Projectile.cs" />
+    <Compile Include="Entities\Projectile.Generated.cs">
+      <DependentUpon>Projectile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\TargetDummy.cs" />
     <Compile Include="Entities\TargetDummy.Generated.cs">
       <DependentUpon>TargetDummy.cs</DependentUpon>
@@ -442,7 +450,6 @@
     <Compile Include="Factories\DefaultEnemyFactory.Generated.cs" />
     <Compile Include="Factories\DefaultGunFactory.Generated.cs" />
     <Compile Include="Factories\DefaultSwordFactory.Generated.cs" />
-    <Compile Include="Factories\EnemyFactory.Generated.cs" />
     <Compile Include="Factories\PlayerFactory.Generated.cs" />
     <Compile Include="Factories\TargetDummyFactory.Generated.cs" />
     <Compile Include="FileAliases.Generated.cs" />
